--- a/index.html
+++ b/index.html
@@ -11,10 +11,39 @@
 <body>
 
     <header>
-        <h1>Hi , welcome to my website.</h1>
+        <img class="V200W" src="./volleyballv200wcartoon.png" alt="roundvb" width="100">
+        <h1>Nicholas Chuah</h1>
+        <div id="spacer"></div>
+
+        <nav>
+            <a href="">Twt</a>
+            <a href="">Git</a>
+            <a href="">Lnk</a>
+        </nav>
     </header>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias nam omnis ipsa rerum nihil adipisci, neque
-        iure. Explicabo ut, esse, dignissimos id odio natus nam, similique ducimus voluptatibus alias asperiores?</p>
+    <main>
+
+        <section>
+            <img class="pfp" src="./vbpfp.png" alt="Avatar">
+            <h2>About me </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint commodi nemo, et doloribus architecto
+                facere in dolor maxime iusto voluptatum nam qui, quam praesentium sapiente nesciunt. Quam quibusdam
+                molestiae nisi facere molestias nostrum neque odit incidunt consectetur ea nihil quas voluptate dicta,
+                officiis nulla perspiciatis natus quis modi quod ratione.</p>
+        </section>
+
+    </main>
+
+
+
+
+
+
+
+
+
+
+
 
 
 </body>
