--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nickolatte's Page</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -39,9 +39,12 @@
         <section>
             <img class="pfp" src="./vbpfp.png" alt="Avatar">
             <h2>About me </h2>
-            <p>Hello my name is Nicholas, I am currently a first year at Access Creative College. <br>
-                I'm studying 'Software Development'. At the moment im learning <b>Python </b> , <b>HTML</b> , <b>CSS</b>
+            <p>Hello! and welcome to my website my name is Nicholas, I am currently a first year at Access Creative College. 
+                I'm studying 'Software Development'. At the moment im learning <b>Python </b> , <b>HTML</b> , <b>CSS</b>.
 
+                <br>
+                <br>
+                Based in Bristol, I am part of&nbsp;&nbsp;<a href="https://www.bristolvc.org.uk/" target="_blank"> 'Bristol Volleyball Club' </a></p>
             </p>
         
             
