--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
 
+
+
     <header>
 
 
@@ -25,16 +27,19 @@
 
 
         <nav>
-            <a id="twitter" href="https://x.com/Nickolattee" target="_blank">
-            </a>
-            <a id="github" href="https://github.com/Nickolatte" target="_blank">
+            <a id="twitter" href="https://x.com/Nickolattee" target="_blank"> </a>
 
-            </a>
+            <a id="github" href="https://github.com/Nickolatte" target="_blank"></a>
+
+            <a id="linkedin" href="www.linkedin.com/in/nicholas-chuah-uk" target="_blank"></a>
+
 
 
         </nav>
     </header>
     <main>
+
+
 
         <section>
             <img class="pfp" src="./vbpfp.png" alt="Avatar">
@@ -43,7 +48,7 @@
                 College.
                 I'm studying 'Software Development'. At the moment I'm learning <b>Python </b> , <b>HTML</b> ,
                 <b>CSS</b>.
-                Currently I have a huge interest towards computer hardware
+                Currently I have a huge interest towards computer hardware.
                 <br>
                 <br>
                 Based in Bristol, I am part of&nbsp;&nbsp;<a href="https://www.bristolvc.org.uk/"
