--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="./code.js"></script>
 </head>
 
-
 <body>
     <aside>
         <img class="pfp" src="vbpfp.png" alt="pfp Image" class="pfp-image">
@@ -27,20 +26,20 @@
     </aside>
     <main>
         <h2>About me </h2>
-            <p>Hello! and welcome to my website my name is Nicholas, I am currently a first year at Access Creative
-                College.
-                I'm studying 'Software Development'. At the moment I'm learning <b>Python </b> , <b>HTML</b> ,
-                <b>CSS</b>.
-                Currently I have a huge interest towards computer hardware.
-                <br>
-                <br>
-                Based in Bristol, I am part of&nbsp;&nbsp;<a href="https://www.bristolvc.org.uk/"
-                    target="_blank">'Bristol Volleyball Club'</a> &nbsp;
-                and play for their 'Advanced U18 Boys team'.
-                We are currently in two leagues: 'Bristol and District' and also the National Grand Prix.
-            </p>
-            </p>
-            <br><br><br>
+        <p>Hello! and welcome to my website my name is Nicholas, I am currently a first year at Access Creative
+            College.
+            I'm studying 'Software Development'. At the moment I'm learning <b>Python </b> , <b>HTML</b> ,
+            <b>CSS</b>.
+            Currently I have a huge interest towards computer hardware.
+            <br>
+            <br>
+            Based in Bristol, I am part of&nbsp;&nbsp;<a href="https://www.bristolvc.org.uk/" target="_blank">'Bristol
+                Volleyball Club'</a> &nbsp;
+            and play for their 'Advanced U18 Boys team'.
+            We are currently in two leagues: 'Bristol and District' and also the National Grand Prix.
+        </p>
+        </p>
+        <br><br><br>
     </main>
 
     <!-- 
