--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 Volleyball Club'</a> &nbsp;
             and play for their 'Advanced U18 Boys team'.
             We are currently in two leagues: 'Bristol and District' and also the National Grand Prix.
+
+            <a href="./projects/contact/" target="_blank"> <button class="contact">contact</button></a>
+
         </p>
         </p>
         <br><br><br>
