added 3 more things

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
             and play for their 'Advanced U18 Boys team'.
             We are currently in two leagues: 'Bristol and District' and also the National Grand Prix.
 
-            <a href="./projects/contact/" target="_blank"> <button class="contact">contact</button></a>
-
+            <a href="./projects/contact/" target="_blank"> <button class="contact">Contact</button></a>
+            <a href="./projects/productpreview/" target="_blank"> <button class="Product">Product</button></a>
+            <a href="./projects/3column/" target="_blank"> <button class="3Column">3Column</button></a>
         </p>
         </p>
         <br><br><br>
